<resources>
    <string name="app_name">YouTube Music</string>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <string name="menu_home">Principal</string>
    <string name="menu_explore">Explorar</string>
    <string name="menu_library">Biblioteca</string>
    <string name="menu_upgrade">Actualizar</string>
    <string name="menu_settings">Configuración</string>
    <string name="menu_help">Ayuda y comentarios</string>
    <string name="menu_logout">Cerrar sesión</string>
    <string name="menu_username">OstoaLeonardo</string>
    <string name="menu_email">imlost@micorreo.upp.edu.mx</string>
    <string name="menu_plan">Plan gratuito</string>
    <string name="create_playlist">Crear lista de reproducción</string>
    <string name="title_playlist">Titulo</string>
    <string name="description_playlist">Descripción</string>
    <string name="privacy_playlist">Privacidad</string>
    <string name="create_playlist_button">Crear</string>
    <string name="cancel_playlist_button">Cancelar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>