<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn = "navigation_view">

    <group
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/outline_home_24"
            android:title="@string/menu_home"/>
        <item
            android:id="@+id/nav_library"
            android:icon="@drawable/outline_library_music_24"
            android:title="@string/menu_library"/>
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/outline_settings_24"
            android:title="@string/menu_settings"/>
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/outline_help_outline_24"
            android:title="@string/menu_help"/>
    </group>

    <item
        android:title="">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/outline_logout_24"
                android:title="@string/menu_logout"/>
        </menu>
    </item>
</menu>