<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dialog_background">

    <ImageView
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:src="@drawable/round_remove_24"
        android:layout_gravity="center|top"
        android:scaleType="centerCrop"
        tools:ignore="ContentDescription" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/createText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="5dp"
            android:padding="8dp"
            android:text="@string/create_playlist"
            android:textAlignment="viewStart"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutTitle"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="10dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="30dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/title_playlist"
            android:inputType="text"
            android:autofillHints="" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="30dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/description_playlist"
            android:inputType="text"
            android:autofillHints="" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutPrivacy"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp"
        android:paddingBottom="30dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/privacy_playlist"
            android:layout_marginStart="30dp"
            android:textSize="16sp"/>

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="30dp"
            android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutButtons"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:gravity="end">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="7dp"
            android:text="@string/cancel_playlist_button"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_playlist_button"
            android:backgroundTint="?android:attr/colorPrimary"
            tools:ignore="ButtonStyle" />

    </LinearLayout>
</LinearLayout>